<resources>
    <string name="app_name">Lab3</string>
    <string name="principal">Mis Contactos</string>
    <string name="add">Agregar Contacto</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="email">e-mail</string>
    <string name="back">Regresar</string>
    <string name="crear">Crear</string>
    <string name="fotografia_de_contacto">imageView</string>
    <string name="asunto">Asunto</string>
    <string name="enviar_correo">Enviar Correo</string>
    <string name="destinatario">Destinatario</string>
    <string name="mensaje">Mensaje</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="de">De</string>
    <string name="para">Para</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_mail">Enviar Mail</string>
    <string name="pista">Escribe tu mensaje aqui</string>
</resources>
