<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.CrearActivity">

    <EditText
            android:layout_width="271dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/nameInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" android:layout_marginTop="175dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/phoneInput" app:layout_constraintHorizontal_bias="0.0"
            android:textColorHighlight="#FFFF66"/>
    <EditText
            android:layout_width="274dp"
            android:layout_height="39dp"
            android:inputType="phone"
            android:ems="10"
            android:text="@string/phone"
            android:id="@+id/phoneInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="135dp"
            android:layout_marginRight="135dp" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/emailInput" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="274dp"
            android:layout_height="41dp"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:ems="10"
            android:id="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneInput" app:layout_constraintHorizontal_bias="0.032"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp" app:layout_constraintEnd_toStartOf="@+id/button3"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClick_Home"/>
    <Button
            android:text="@string/crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginRight="80dp"
            android:onClick="onClick_Add"/>
</android.support.constraint.ConstraintLayout>